cmake_minimum_required(VERSION 3.0)
project(OnionOram)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -pthread")
set(SOURCE_FILES src/damgard_jurik.cpp src/OramBlock.cpp src/OramBucket.cpp src/OramClient.cpp src/OramCrypto.cpp
                 src/OramSelector.cpp src/OramServer.cpp src/OramSocket.cpp src/OramBucketStorage.cpp src/OramMain.cpp src/OramLogger.h
                 src/OramBatchTask)
add_executable(OnionOram ${SOURCE_FILES})
#add_executable(TestBlock src/OramBlock.cpp src/damgard_jurik.cpp src/OramCrypto.cpp test/TestOramBlock.cpp)
#add_executable(TestEncrypt src/damgard_jurik.cpp test/TestEncrypt.cpp src/OramCrypto.cpp)
#add_executable(TestBucket src/damgard_jurik.cpp src/OramBlock.cpp src/OramBucket.cpp src/OramCrypto.cpp test/TestBucket.cpp)
#add_executable(TestSelector src/damgard_jurik.cpp src/OramBlock.cpp src/OramBucket.cpp src/OramCrypto.cpp src/OramSelector.cpp test/TestOramSelector.cpp)
#add_executable(TestCom src/damgard_jurik.cpp test/TestCompression.cpp)
#add_executable(TestConcurrency src/OramBatchTask.cpp src/damgard_jurik.cpp src/OramCrypto.cpp test/TestConcorrency.cpp)
target_link_libraries(OnionOram sodium gmp)
#target_link_libraries(TestBlock sodium gmp)
#target_link_libraries(TestEncrypt sodium gmp)
#target_link_libraries(TestBucket sodium gmp)
#target_link_libraries(TestSelector sodium gmp)
#target_link_libraries(TestCom sodium gmp)
#target_link_libraries(TestConcurrency sodium gmp)
set(LIBRARY_OUTPUT_PATH build/bin)